# fresh_frame

./: .gitignore  README.md  pyproject.toml
src/fresh_frame/: image_processing.py  main.py
